--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,16 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="not-found">Not found</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="produit">Produit</a>
+      </li>
       
     </ul>
     
   </div>
 </nav>
 
+<div class="container">
+  <router-outlet></router-outlet>
 
-<router-outlet></router-outlet>
+</div>
