--- a/src/app/authentification/authentification.component.html
+++ b/src/app/authentification/authentification.component.html
@@ -1,7 +1,7 @@
 
 
 <body class="container text-center mt-5">
-    <form class="form-signin " *ngIf="!authStatus">
+    <div class="form-signin " *ngIf="!authStatus">
         <div class="glyphicon glyphicon-user"  alt="" width="72" height="72"></div>
         <h1 class="h3 mb-3 font-weight-normal">Sign in</h1>
         
@@ -16,7 +16,7 @@
         <button class="btn btn-lg btn-primary btn-block"  (click)="onSignIn()">Sign in</button>
 
         <p class="mt-5 mb-3 text-muted">© 2020-2022</p>
-    </form>
+    </div>
     <button class="btn btn-lg btn-primary btn-block" *ngIf="authStatus"  (click)="onSignOut()">Sign out</button>
 
 
