--- a/src/app/produit/produit.component.html
+++ b/src/app/produit/produit.component.html
@@ -1,1 +1,92 @@
-<p>produit works!</p>
+<h1>Produits</h1>
+
+<div class="row">
+    <div class="col col-sm-6">
+        
+        <table class="table table-hover">
+        
+            <thead>
+                <tr>
+                    <th>Réference</th>
+                    <th>Quantité</th>
+                    <th>Prix unitiare</th>
+                    <th>
+                        <button class="btn btn-outline-primary"
+                        (click)="operation='add';initProduit();">
+                            Add
+                        </button>
+                    </th>
+
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let produit of produits">
+                    <td>{{produit.ref}}</td>
+                    <td>{{produit.quantite}}</td>
+                    <td>{{produit.prixunitaire}}</td>
+                    <td>
+                        <button class="btn btn-outline-primary mr-1" 
+                        (click)="operation='edit';selectedProduit=produit;">
+                            Edit
+                        </button>
+                        <button class="btn btn-outline-danger" 
+                        (click)="operation='remove';selectedProduit=produit; deleteProduit();">
+                            Remove
+                        </button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="col col-sm-6">
+        <div class="card">
+            <div class="card-header bg-info text-white">
+                {{operation=='add'?'Ajouter produit':
+            operation=='edit'?'Modifier produit':
+            operation=='remove'?'Supprimer produit':
+            ''
+            }}
+
+            </div>
+            <div class="card-body">
+                <form [formGroup]="produitForm">
+                    <div class="form-group">
+                        <label> Réference</label>
+                        <input type="text" class="form-control" formControlName="ref" [(ngModel)]="selectedProduit.ref">
+                        <div class="alert alert-danger" *ngIf="produitForm.controls['ref'].invalid && (produitForm.controls['ref'].touched || produitForm.controls['ref'].dirty)">
+                            réf obligatoire!!
+                        </div> 
+                    </div>
+                    <div class="form-group">
+                        <label> quantite</label>
+                        <input type="number" class="form-control" formControlName="quantite" [(ngModel)]="selectedProduit.quantite">
+                    </div>
+                    <div class="form-group">
+                        <label> prix unitaire</label>
+                        <input type="number" class="form-control" formControlName="prixunitaire" [(ngModel)]="selectedProduit.prixunitaire">
+                    </div>
+                        <button class="btn btn-success" [disabled]="produitForm.pristine || produitForm.invalid"
+                        (click)="
+                        operation=='add'?addProduit():
+                        operation=='edit'?updateProduit():
+                        operation=='remove'?deleteProduit():
+                        ''
+                        ">
+                        {{operation=='add'?'Ajouter':
+                        operation=='edit'?'Modifier':
+                        operation=='remove'?'Supprimer':
+                        ''
+                        }}
+                        </button>
+                  
+                
+                </form>
+            </div>
+            <div class="card-footer">
+        
+            </div>
+        </div>
+    </div>
+
+</div>
+
