--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,2 @@
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">App Angular with Spring</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="login">login </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="not-found">Not found</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="produit">Produit</a>
-      </li>
-      
-    </ul>
-    
-  </div>
-</nav>
-
-<div class="container">
-  <router-outlet></router-outlet>
-
-</div>
+<app-navbar></app-navbar>
