--- a/src/app/inscription/inscription.component.html
+++ b/src/app/inscription/inscription.component.html
@@ -5,14 +5,14 @@
             <div class="card-body text-secondary">
                 <form [formGroup]="userForm">
 
-                    <input type="text" class="form-control" formControlName="prenom"  placeholder="Prénom">
+                    <input type="text" class="form-control" formControlName="name"  placeholder="name">
 
-                    <input type="text" class="form-control" formControlName="nom" placeholder="Nom" >
+                    <input type="text" class="form-control" formControlName="username" placeholder="username" >
 
                     <input type="email" class="form-control" formControlName="email" placeholder="Email address" >
                     
                     
-                    <input type="password" class="form-control" formControlName="mdp" placeholder="Password">
+                    <input type="password" class="form-control" formControlName="password" placeholder="Password">
                     
                     <br>
             
